examples/tests/invalid/lift_use_inflight_obj_in_lift.w
let x = MutArray<str> ["hello"];

inflight () => {
  let y = 0;
  x.copy().at(y);
//            ^ Cannot reference an inflight object from a preflight expression
};